# fiery-diffeo

./: README.md  pyproject.toml  zensical.toml
.github/workflows/: test-matrix.yaml  test.yaml
demo/: backends.py  benchmark.py  shoot.py  svf.py
docs/api/: backends.md  flows.md  index.md  layers.md  metrics.md
src/fiery/diffeo/: __init__.py  bounds.py  diffdiv.py  flows.py  layers.py  linalg.py  shoot.py  svf.py  utils.py
src/fiery/diffeo/backends/: __init__.py
src/fiery/diffeo/backends/interpol/: __init__.py  grad.py  pull.py  push.py
src/fiery/diffeo/backends/jitfields/: __init__.py  grad.py  pull.py  push.py
src/fiery/diffeo/backends/torch/: __init__.py  grad.py  pull.py  push.py  resize.py
src/fiery/diffeo/dft/: __init__.py  alltransforms.py  bounds.py  generic.py
src/fiery/diffeo/dft/dct/: __init__.py  _realtransforms.py  cpu.py  cuda.py
src/fiery/diffeo/metrics/: __init__.py  base.py
src/fiery/diffeo/metrics/differential/: greens.py  layers.py
src/fiery/diffeo/metrics/discrete/: forward.py  kernels.py  layers.py
src/fiery/diffeo/metrics/gaussian/: layers.py
src/fiery/diffeo/tests/: phantoms.py
tests/: requirements.txt  test_devendor.py  test_import.py
